--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <title>Crypto Verse</title>
 
 
-  <script type="module" src="./assets/js/main.js"></script>
-  <link rel="stylesheet" href="./assets/css/main.css">
+  <script type="module" src="/solus-group/assets/js/main.js"></script>
+  <link rel="stylesheet" href="/solus-group/assets/css/main.css">
 </head>
 
 <body>
@@ -18,7 +18,7 @@
     <div class="container">
       <div class="header__navbar">
         <a href="/" class="header__logo">
-          <img class="header__logo-img" src="./assets/img/logo.svg" alt="CryptoVerse">
+          <img class="header__logo-img" src="/solus-group/assets/img/logo.svg" alt="CryptoVerse">
         </a>
         <nav class="header__nav">
           <ul class="header__list">
@@ -75,7 +75,7 @@
             <div class="swiper-slide">
               <div class="services__slider-wrapper">
                 <div class="services__slider-card">
-                  <img class="services__slider-card-img" src="./assets/img/service-icon1.svg" alt="Crypto Basics">
+                  <img class="services__slider-card-img" src="/solus-group/assets/img/service-icon1.svg" alt="Crypto Basics">
                   <h3 class="services__slider-card-title">Crypto Basics</h3>
                   <p class="services__slider-card-text">Learn the fundamentals of cryptocurrency and blockchain
                     technology. We'll explain what cryptocurrencies are, how they work, and the underlying technology
@@ -86,7 +86,7 @@
             <div class="swiper-slide">
               <div class="services__slider-wrapper">
                 <div class="services__slider-card">
-                  <img class="services__slider-card-img" src="./assets/img/service-icon2.svg" alt="Investing and Trading">
+                  <img class="services__slider-card-img" src="/solus-group/assets/img/service-icon2.svg" alt="Investing and Trading">
                   <h3 class="services__slider-card-title">Investing and Trading</h3>
                   <p class="services__slider-card-text">Discover the strategies and tools you need to invest and trade
                     cryptocurrencies effectively. From understanding market trends and managing risk to using trading
@@ -98,7 +98,7 @@
             <div class="swiper-slide">
               <div class="services__slider-wrapper">
                 <div class="services__slider-card">
-                  <img class="services__slider-card-img" src="./assets/img/service-icon3.svg"
+                  <img class="services__slider-card-img" src="/solus-group/assets/img/service-icon3.svg"
                     alt="Blockchain Applications">
                   <h3 class="services__slider-card-title">Blockchain Applications</h3>
                   <p class="services__slider-card-text">Explore the diverse applications of blockchain technology beyond
@@ -111,7 +111,7 @@
             <div class="swiper-slide">
               <div class="services__slider-wrapper">
                 <div class="services__slider-card">
-                  <img class="services__slider-card-img" src="./assets/img/service-icon1.svg" alt="Crypto Basics">
+                  <img class="services__slider-card-img" src="/solus-group/assets/img/service-icon1.svg" alt="Crypto Basics">
                   <h3 class="services__slider-card-title">Crypto Basics</h3>
                   <p class="services__slider-card-text">Learn the fundamentals of cryptocurrency and blockchain
                     technology. We'll explain what cryptocurrencies are, how they work, and the underlying technology
@@ -122,7 +122,7 @@
             <div class="swiper-slide">
               <div class="services__slider-wrapper">
                 <div class="services__slider-card">
-                  <img class="services__slider-card-img" src="./assets/img/service-icon2.svg" alt="Investing and Trading">
+                  <img class="services__slider-card-img" src="/solus-group/assets/img/service-icon2.svg" alt="Investing and Trading">
                   <h3 class="services__slider-card-title">Investing and Trading</h3>
                   <p class="services__slider-card-text">Discover the strategies and tools you need to invest and trade
                     cryptocurrencies effectively. From understanding market trends and managing risk to using trading
@@ -134,7 +134,7 @@
             <div class="swiper-slide">
               <div class="services__slider-wrapper">
                 <div class="services__slider-card">
-                  <img class="services__slider-card-img" src="./assets/img/service-icon3.svg"
+                  <img class="services__slider-card-img" src="/solus-group/assets/img/service-icon3.svg"
                     alt="Blockchain Applications">
                   <h3 class="services__slider-card-title">Blockchain Applications</h3>
                   <p class="services__slider-card-text">Explore the diverse applications of blockchain technology beyond
@@ -147,7 +147,7 @@
             <div class="swiper-slide">
               <div class="services__slider-wrapper">
                 <div class="services__slider-card">
-                  <img class="services__slider-card-img" src="./assets/img/service-icon1.svg" alt="Crypto Basics">
+                  <img class="services__slider-card-img" src="/solus-group/assets/img/service-icon1.svg" alt="Crypto Basics">
                   <h3 class="services__slider-card-title">Crypto Basics</h3>
                   <p class="services__slider-card-text">Learn the fundamentals of cryptocurrency and blockchain
                     technology. We'll explain what cryptocurrencies are, how they work, and the underlying technology
@@ -158,7 +158,7 @@
             <div class="swiper-slide">
               <div class="services__slider-wrapper">
                 <div class="services__slider-card">
-                  <img class="services__slider-card-img" src="./assets/img/service-icon2.svg" alt="Investing and Trading">
+                  <img class="services__slider-card-img" src="/solus-group/assets/img/service-icon2.svg" alt="Investing and Trading">
                   <h3 class="services__slider-card-title">Investing and Trading</h3>
                   <p class="services__slider-card-text">Discover the strategies and tools you need to invest and trade
                     cryptocurrencies effectively. From understanding market trends and managing risk to using trading
@@ -170,7 +170,7 @@
             <div class="swiper-slide">
               <div class="services__slider-wrapper">
                 <div class="services__slider-card">
-                  <img class="services__slider-card-img" src="./assets/img/service-icon3.svg"
+                  <img class="services__slider-card-img" src="/solus-group/assets/img/service-icon3.svg"
                     alt="Blockchain Applications">
                   <h3 class="services__slider-card-title">Blockchain Applications</h3>
                   <p class="services__slider-card-text">Explore the diverse applications of blockchain technology beyond
@@ -211,7 +211,7 @@
     <div class="container">
       <div class="footer__top">
         <a href="/" class="footer__logo">
-          <img src="./assets/img/logo.svg" alt="CryptoVerse">
+          <img src="/solus-group/assets/img/logo.svg" alt="CryptoVerse">
         </a>
         <nav class="footer__nav">
           <ul class="footer__nav-list">
