--- a/second.html
+++ b/second.html
@@ -7,8 +7,8 @@
   <title>Document</title>
 
 
-  <script type="module" src="/solus-group/assets/js/main.js"></script>
-  <link rel="stylesheet" href="/solus-group/assets/css/main.css">
+  <script type="module" src="./assets/js/main.js"></script>
+  <link rel="stylesheet" href="./assets/css/main.css">
 </head>
 <body>
 
