--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
         <h1 class="h1">Discover the Power of Crypto & Blockchain</h1>
         <p>Welcome to our educational platform where we demystify the world of cryptocurrency and blockchain technology.
           Join us on this educational journey and unlock the potential of crypto and blockchain for your future.</p>
-        <a href="#contact" class="btn btn--accent">Get Started</a>
+        <a href="#contact" class="btn btn--accent animation--fade-in">Get Started</a>
       </div>
     </div>
   </section>
@@ -54,15 +54,15 @@
     <div class="container">
       <div class="services__wrapper">
         <h2 class="h2 animation--fade-up">Services we provide</h2>
-        <div class="services__nav animation--fade-up">
-          <div class="services__nav-btn services__nav-btn--prev">
+        <div class="services__nav">
+          <div class="services__nav-btn services__nav-btn--prev animation--fade-in">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path
                 d="M21.0001 12C21.0001 12.1989 20.9211 12.3897 20.7804 12.5303C20.6398 12.671 20.449 12.75 20.2501 12.75H5.56041L11.0307 18.2194C11.1004 18.289 11.1557 18.3718 11.1934 18.4628C11.2311 18.5539 11.2505 18.6514 11.2505 18.75C11.2505 18.8485 11.2311 18.9461 11.1934 19.0372C11.1557 19.1282 11.1004 19.2109 11.0307 19.2806C10.961 19.3503 10.8783 19.4056 10.7873 19.4433C10.6962 19.481 10.5986 19.5004 10.5001 19.5004C10.4016 19.5004 10.304 19.481 10.2129 19.4433C10.1219 19.4056 10.0392 19.3503 9.96948 19.2806L3.21948 12.5306C3.14974 12.461 3.09443 12.3782 3.05668 12.2872C3.01894 12.1961 2.99951 12.0986 2.99951 12C2.99951 11.9014 3.01894 11.8038 3.05668 11.7128C3.09443 11.6217 3.14974 11.539 3.21948 11.4694L9.96948 4.71936C10.1102 4.57863 10.3011 4.49957 10.5001 4.49957C10.6991 4.49957 10.89 4.57863 11.0307 4.71936C11.1715 4.8601 11.2505 5.05097 11.2505 5.24999C11.2505 5.44901 11.1715 5.63988 11.0307 5.78061L5.56041 11.25H20.2501C20.449 11.25 20.6398 11.329 20.7804 11.4697C20.9211 11.6103 21.0001 11.8011 21.0001 12Z"
                 fill="#FFD722" />
             </svg>
           </div>
-          <div class="services__nav-btn services__nav-btn--next">
+          <div class="services__nav-btn services__nav-btn--next animation--fade-in">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path
                 d="M20.7806 12.5306L14.0306 19.2806C13.8899 19.4213 13.699 19.5004 13.5 19.5004C13.301 19.5004 13.1101 19.4213 12.9694 19.2806C12.8286 19.1399 12.7496 18.949 12.7496 18.75C12.7496 18.551 12.8286 18.3601 12.9694 18.2194L18.4397 12.75H3.75C3.55109 12.75 3.36032 12.671 3.21967 12.5303C3.07902 12.3897 3 12.1989 3 12C3 11.8011 3.07902 11.6103 3.21967 11.4697C3.36032 11.329 3.55109 11.25 3.75 11.25H18.4397L12.9694 5.78061C12.8286 5.63988 12.7496 5.44901 12.7496 5.24999C12.7496 5.05097 12.8286 4.8601 12.9694 4.71936C13.1101 4.57863 13.301 4.49957 13.5 4.49957C13.699 4.49957 13.8899 4.57863 14.0306 4.71936L20.7806 11.4694C20.8504 11.539 20.9057 11.6217 20.9434 11.7128C20.9812 11.8038 21.0006 11.9014 21.0006 12C21.0006 12.0986 20.9812 12.1961 20.9434 12.2872C20.9057 12.3782 20.8504 12.461 20.7806 12.5306Z"
@@ -70,11 +70,12 @@
             </svg>
           </div>
         </div>
-        <div class="services__slider swiper animation--fade-up">
+        <div class="services__slider swiper">
           <div class="swiper-wrapper">
             <div class="swiper-slide">
               <div class="services__slider-wrapper">
-                <div class="services__slider-card">
+                <div class="services__slider-num animation--fade-in"></div>
+                <div class="services__slider-card animation--fade-up">
                   <img class="services__slider-card-img" src="assets/img/service-icon1.svg" alt="Crypto Basics">
                   <h3 class="services__slider-card-title">Crypto Basics</h3>
                   <p class="services__slider-card-text">Learn the fundamentals of cryptocurrency and blockchain
@@ -85,7 +86,8 @@
             </div>
             <div class="swiper-slide">
               <div class="services__slider-wrapper">
-                <div class="services__slider-card">
+                <div class="services__slider-num animation--fade-in"></div>
+                <div class="services__slider-card animation--fade-up">
                   <img class="services__slider-card-img" src="assets/img/service-icon2.svg" alt="Investing and Trading">
                   <h3 class="services__slider-card-title">Investing and Trading</h3>
                   <p class="services__slider-card-text">Discover the strategies and tools you need to invest and trade
@@ -97,7 +99,8 @@
             </div>
             <div class="swiper-slide">
               <div class="services__slider-wrapper">
-                <div class="services__slider-card">
+                <div class="services__slider-num animation--fade-in"></div>
+                <div class="services__slider-card animation--fade-up">
                   <img class="services__slider-card-img" src="assets/img/service-icon3.svg"
                     alt="Blockchain Applications">
                   <h3 class="services__slider-card-title">Blockchain Applications</h3>
@@ -110,7 +113,8 @@
             </div>
             <div class="swiper-slide">
               <div class="services__slider-wrapper">
-                <div class="services__slider-card">
+                <div class="services__slider-num animation--fade-in"></div>
+                <div class="services__slider-card animation--fade-up">
                   <img class="services__slider-card-img" src="assets/img/service-icon1.svg" alt="Crypto Basics">
                   <h3 class="services__slider-card-title">Crypto Basics</h3>
                   <p class="services__slider-card-text">Learn the fundamentals of cryptocurrency and blockchain
@@ -121,7 +125,8 @@
             </div>
             <div class="swiper-slide">
               <div class="services__slider-wrapper">
-                <div class="services__slider-card">
+                <div class="services__slider-num animation--fade-in"></div>
+                <div class="services__slider-card animation--fade-up">
                   <img class="services__slider-card-img" src="assets/img/service-icon2.svg" alt="Investing and Trading">
                   <h3 class="services__slider-card-title">Investing and Trading</h3>
                   <p class="services__slider-card-text">Discover the strategies and tools you need to invest and trade
@@ -133,7 +138,8 @@
             </div>
             <div class="swiper-slide">
               <div class="services__slider-wrapper">
-                <div class="services__slider-card">
+                <div class="services__slider-num animation--fade-in"></div>
+                <div class="services__slider-card animation--fade-up">
                   <img class="services__slider-card-img" src="assets/img/service-icon3.svg"
                     alt="Blockchain Applications">
                   <h3 class="services__slider-card-title">Blockchain Applications</h3>
@@ -146,7 +152,8 @@
             </div>
             <div class="swiper-slide">
               <div class="services__slider-wrapper">
-                <div class="services__slider-card">
+                <div class="services__slider-num animation--fade-in"></div>
+                <div class="services__slider-card animation--fade-up">
                   <img class="services__slider-card-img" src="assets/img/service-icon1.svg" alt="Crypto Basics">
                   <h3 class="services__slider-card-title">Crypto Basics</h3>
                   <p class="services__slider-card-text">Learn the fundamentals of cryptocurrency and blockchain
@@ -157,7 +164,8 @@
             </div>
             <div class="swiper-slide">
               <div class="services__slider-wrapper">
-                <div class="services__slider-card">
+                <div class="services__slider-num animation--fade-in"></div>
+                <div class="services__slider-card animation--fade-up">
                   <img class="services__slider-card-img" src="assets/img/service-icon2.svg" alt="Investing and Trading">
                   <h3 class="services__slider-card-title">Investing and Trading</h3>
                   <p class="services__slider-card-text">Discover the strategies and tools you need to invest and trade
@@ -169,7 +177,8 @@
             </div>
             <div class="swiper-slide">
               <div class="services__slider-wrapper">
-                <div class="services__slider-card">
+                <div class="services__slider-num animation--fade-in"></div>
+                <div class="services__slider-card animation--fade-up">
                   <img class="services__slider-card-img" src="assets/img/service-icon3.svg"
                     alt="Blockchain Applications">
                   <h3 class="services__slider-card-title">Blockchain Applications</h3>
