--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 
   <section class="hero">
     <div class="container">
-      <div class="hero__content animation--fade-up">
-        <h1 class="h1">Discover the Power of Crypto & Blockchain</h1>
-        <p>Welcome to our educational platform where we demystify the world of cryptocurrency and blockchain technology.
+      <div class="hero__content">
+        <h1 class="h1 animation--fade-up">Discover the Power of Crypto & Blockchain</h1>
+        <p class="animation--fade-up">Welcome to our educational platform where we demystify the world of cryptocurrency and blockchain technology.
           Join us on this educational journey and unlock the potential of crypto and blockchain for your future.</p>
         <a href="#contact" class="btn btn--accent animation--fade-in">Get Started</a>
       </div>
