--- a/src/index.html
+++ b/src/index.html
@@ -204,7 +204,7 @@
           <p class="contacts__content-text">Schedule Your introductory call! We'll explain what cryptocurrencies are,
             how they work, and the underlying technology that makes them secure and decentralized.</p>
         </div>
-        <div class="contacts__schedule animation--fade-up">
+        <div class="contacts__schedule animation--fade-in">
           <div class="contacts__schedule-wrapper">
             <div class="calendly-inline-widget"
               data-url="https://calendly.com/aleksandr-petryha/30min?hide_event_type_details=1&hide_gdpr_banner=1&background_color=0f0e0f&text_color=aeaeae&primary_color=ffd722">
