--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
   </header>
 
   <section class="hero">
+    <video autoplay loop muted playsinline class="hero__video" poster="./assets/img/hero-bg.png">
+      <source src="./assets/img/hero-video-loop.mp4" type="video/mp4">
+      Ваш браузер не підтримує відео.
+    </video>
     <div class="container">
       <div class="hero__content">
         <h1 class="h1 animation--fade-up">Discover the Power of Crypto & Blockchain</h1>
