--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="./assets/img/favicon.png">
-  <title>Crypto Verse</title>
+  <title>Solus Group</title>
 
 
   <script type="module" src="./assets/js/main.js"></script>
