--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" href="./assets/img/favicon.png">
+  <link rel="icon" href="/solus-group/assets/img/favicon.png">
   <title>Solus Group</title>
 
 
-  <script type="module" src="./assets/js/main.js"></script>
-  <link rel="stylesheet" href="./assets/css/main.css">
+  <script type="module" src="/solus-group/assets/js/main.js"></script>
+  <link rel="stylesheet" href="/solus-group/assets/css/main.css">
 </head>
 
 <body>
@@ -19,7 +19,7 @@
     <div class="container">
       <div class="header__navbar">
         <a href="/" class="header__logo">
-          <img class="header__logo-img" src="./assets/img/logo.svg" alt="CryptoVerse">
+          <img class="header__logo-img" src="/solus-group/assets/img/logo.svg" alt="CryptoVerse">
         </a>
         <nav class="header__nav">
           <ul class="header__list">
@@ -41,8 +41,8 @@
   </header>
 
   <section class="hero">
-    <video autoplay loop muted playsinline class="hero__video" poster="./assets/img/hero-bg.png">
-      <source src="./assets/img/hero-video-loop.mp4" type="video/mp4">
+    <video autoplay loop muted playsinline class="hero__video" poster="/solus-group/assets/img/hero-bg.png">
+      <source src="/solus-group/assets/img/hero-video-loop.mp4" type="video/mp4">
       Ваш браузер не підтримує відео.
     </video>
     <div class="container">
@@ -81,7 +81,7 @@
               <div class="services__slider-wrapper">
                 <div class="services__slider-num animation--fade-in"></div>
                 <div class="services__slider-card animation--fade-up">
-                  <img class="services__slider-card-img" src="./assets/img/service-icon1.svg" alt="Crypto Basics">
+                  <img class="services__slider-card-img" src="/solus-group/assets/img/service-icon1.svg" alt="Crypto Basics">
                   <h3 class="services__slider-card-title">Crypto Basics</h3>
                   <p class="services__slider-card-text">Learn the fundamentals of cryptocurrency and blockchain
                     technology. We'll explain what cryptocurrencies are, how they work, and the underlying technology
@@ -93,7 +93,7 @@
               <div class="services__slider-wrapper">
                 <div class="services__slider-num animation--fade-in"></div>
                 <div class="services__slider-card animation--fade-up">
-                  <img class="services__slider-card-img" src="./assets/img/service-icon2.svg" alt="Investing and Trading">
+                  <img class="services__slider-card-img" src="/solus-group/assets/img/service-icon2.svg" alt="Investing and Trading">
                   <h3 class="services__slider-card-title">Investing and Trading</h3>
                   <p class="services__slider-card-text">Discover the strategies and tools you need to invest and trade
                     cryptocurrencies effectively. From understanding market trends and managing risk to using trading
@@ -106,7 +106,7 @@
               <div class="services__slider-wrapper">
                 <div class="services__slider-num animation--fade-in"></div>
                 <div class="services__slider-card animation--fade-up">
-                  <img class="services__slider-card-img" src="./assets/img/service-icon3.svg"
+                  <img class="services__slider-card-img" src="/solus-group/assets/img/service-icon3.svg"
                     alt="Blockchain Applications">
                   <h3 class="services__slider-card-title">Blockchain Applications</h3>
                   <p class="services__slider-card-text">Explore the diverse applications of blockchain technology beyond
@@ -120,7 +120,7 @@
               <div class="services__slider-wrapper">
                 <div class="services__slider-num animation--fade-in"></div>
                 <div class="services__slider-card animation--fade-up">
-                  <img class="services__slider-card-img" src="./assets/img/service-icon1.svg" alt="Crypto Basics">
+                  <img class="services__slider-card-img" src="/solus-group/assets/img/service-icon1.svg" alt="Crypto Basics">
                   <h3 class="services__slider-card-title">Crypto Basics</h3>
                   <p class="services__slider-card-text">Learn the fundamentals of cryptocurrency and blockchain
                     technology. We'll explain what cryptocurrencies are, how they work, and the underlying technology
@@ -132,7 +132,7 @@
               <div class="services__slider-wrapper">
                 <div class="services__slider-num animation--fade-in"></div>
                 <div class="services__slider-card animation--fade-up">
-                  <img class="services__slider-card-img" src="./assets/img/service-icon2.svg" alt="Investing and Trading">
+                  <img class="services__slider-card-img" src="/solus-group/assets/img/service-icon2.svg" alt="Investing and Trading">
                   <h3 class="services__slider-card-title">Investing and Trading</h3>
                   <p class="services__slider-card-text">Discover the strategies and tools you need to invest and trade
                     cryptocurrencies effectively. From understanding market trends and managing risk to using trading
@@ -145,7 +145,7 @@
               <div class="services__slider-wrapper">
                 <div class="services__slider-num animation--fade-in"></div>
                 <div class="services__slider-card animation--fade-up">
-                  <img class="services__slider-card-img" src="./assets/img/service-icon3.svg"
+                  <img class="services__slider-card-img" src="/solus-group/assets/img/service-icon3.svg"
                     alt="Blockchain Applications">
                   <h3 class="services__slider-card-title">Blockchain Applications</h3>
                   <p class="services__slider-card-text">Explore the diverse applications of blockchain technology beyond
@@ -159,7 +159,7 @@
               <div class="services__slider-wrapper">
                 <div class="services__slider-num animation--fade-in"></div>
                 <div class="services__slider-card animation--fade-up">
-                  <img class="services__slider-card-img" src="./assets/img/service-icon1.svg" alt="Crypto Basics">
+                  <img class="services__slider-card-img" src="/solus-group/assets/img/service-icon1.svg" alt="Crypto Basics">
                   <h3 class="services__slider-card-title">Crypto Basics</h3>
                   <p class="services__slider-card-text">Learn the fundamentals of cryptocurrency and blockchain
                     technology. We'll explain what cryptocurrencies are, how they work, and the underlying technology
@@ -171,7 +171,7 @@
               <div class="services__slider-wrapper">
                 <div class="services__slider-num animation--fade-in"></div>
                 <div class="services__slider-card animation--fade-up">
-                  <img class="services__slider-card-img" src="./assets/img/service-icon2.svg" alt="Investing and Trading">
+                  <img class="services__slider-card-img" src="/solus-group/assets/img/service-icon2.svg" alt="Investing and Trading">
                   <h3 class="services__slider-card-title">Investing and Trading</h3>
                   <p class="services__slider-card-text">Discover the strategies and tools you need to invest and trade
                     cryptocurrencies effectively. From understanding market trends and managing risk to using trading
@@ -184,7 +184,7 @@
               <div class="services__slider-wrapper">
                 <div class="services__slider-num animation--fade-in"></div>
                 <div class="services__slider-card animation--fade-up">
-                  <img class="services__slider-card-img" src="./assets/img/service-icon3.svg"
+                  <img class="services__slider-card-img" src="/solus-group/assets/img/service-icon3.svg"
                     alt="Blockchain Applications">
                   <h3 class="services__slider-card-title">Blockchain Applications</h3>
                   <p class="services__slider-card-text">Explore the diverse applications of blockchain technology beyond
@@ -225,7 +225,7 @@
     <div class="container">
       <div class="footer__top">
         <a href="/" class="footer__logo">
-          <img src="./assets/img/logo.svg" alt="CryptoVerse">
+          <img src="/solus-group/assets/img/logo.svg" alt="CryptoVerse">
         </a>
         <nav class="footer__nav">
           <ul class="footer__nav-list">
