--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <header class="header">
     <div class="container">
       <div class="header__navbar">
-        <a href="/" class="header__logo">
+        <a href="/solus-group/" class="header__logo">
           <img class="header__logo-img" src="/solus-group/assets/img/logo.svg" alt="CryptoVerse">
         </a>
         <nav class="header__nav">
@@ -224,7 +224,7 @@
   <footer class="footer">
     <div class="container">
       <div class="footer__top">
-        <a href="/" class="footer__logo">
+        <a href="/solus-group/" class="footer__logo">
           <img src="/solus-group/assets/img/logo.svg" alt="CryptoVerse">
         </a>
         <nav class="footer__nav">
